[gd_scene load_steps=25 format=3 uid="uid://dhtricebyue2d"]

[ext_resource type="Script" path="res://game/world/world.gd" id="1_4skrw"]
[ext_resource type="PackedScene" uid="uid://dik7or3s40a6s" path="res://3DArt/Models/mage_tower.gltf" id="1_ecthc"]
[ext_resource type="Script" path="res://game/tower/mage_tower.gd" id="3_pl4ac"]
[ext_resource type="Texture2D" uid="uid://mv50jo6e81ip" path="res://2DArt/gem_void.png" id="4_g2fun"]
[ext_resource type="Script" path="res://game/spawner/EnemySpawner.gd" id="5_13m4a"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="5_fc5ra"]
[ext_resource type="AudioStream" uid="uid://bwr10ebx1ylip" path="res://Audio/Enemy_loot_1.wav" id="5_kjmhb"]
[ext_resource type="ArrayMesh" uid="uid://mq30y3od6rul" path="res://3DArt/Meshes/blockbench_export_mesh.res" id="6_g6y1v"]
[ext_resource type="AudioStream" uid="uid://d0842dfh8m1jr" path="res://Audio/Enemy_loot_2.wav" id="6_rslqj"]
[ext_resource type="Script" path="res://scripts/TowerPlacer.gd" id="6_voolx"]
[ext_resource type="Material" path="res://assets/PlaceholderMat.tres" id="9_wr7oq"]
[ext_resource type="Resource" uid="uid://ysdn8utbtsej" path="res://objects/TreeSentry.tres" id="10_0kmq2"]
[ext_resource type="PackedScene" uid="uid://banowsxlou1aq" path="res://objects/game_ui.tscn" id="10_edop1"]
[ext_resource type="Resource" uid="uid://cqurmunffgqe2" path="res://objects/RockSentry.tres" id="12_ohaua"]

[sub_resource type="Environment" id="Environment_6w507"]
background_mode = 1
background_color = Color(0.109804, 0.105882, 0.223529, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
fog_light_color = Color(0.109804, 0.105882, 0.223529, 1)
fog_density = 0.05

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4aeh8"]
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("5_kjmhb")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_rslqj")
stream_1/weight = 1.0

[sub_resource type="Curve" id="Curve_rmvjn"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.498084, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0286168), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_jsqpm"]
curve = SubResource("Curve_rmvjn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w5asb"]
emission_shape = 3
emission_box_extents = Vector3(25, 1, 20)
initial_velocity_min = -2.0
initial_velocity_max = 2.0
gravity = Vector3(0, 1, 0)
tangential_accel_min = -3.0
tangential_accel_max = 3.0
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_jsqpm")

[sub_resource type="NavigationMesh" id="NavigationMesh_e0jfx"]
vertices = PackedVector3Array(-99.5, 0.5, -99.5, -99.5, 0.5, 99.5, 99.5, 0.5, 99.5, 99.5, 0.5, -99.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="PlaneMesh" id="PlaneMesh_fwq5o"]
size = Vector2(200, 200)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ps8qe"]
albedo_color = Color(0.407843, 0.164706, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_e050c"]
material = SubResource("StandardMaterial3D_ps8qe")
size = Vector2(200, 200)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_jx5kv"]

[node name="World" type="Node3D"]
script = ExtResource("1_4skrw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6w507")

[node name="MageTower" parent="." instance=ExtResource("1_ecthc")]
unique_name_in_owner = true
transform = Transform3D(0.948119, 0, -5.37705, 0, 5.46, 0, 5.37705, 0, 0.948119, -11.7548, 0, 4.70232)
script = ExtResource("3_pl4ac")

[node name="CanvasLayer" type="CanvasLayer" parent="MageTower"]

[node name="ProgressBar" type="ProgressBar" parent="MageTower/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -194.0
offset_top = 17.0
offset_right = 194.0
offset_bottom = 44.0
grow_horizontal = 2
max_value = 1000.0
value = 1000.0

[node name="Label" type="Label" parent="MageTower/CanvasLayer"]
offset_left = 32.0
offset_right = 290.0
offset_bottom = 87.0
text = "Gold: "

[node name="TextureRect" type="TextureRect" parent="MageTower/CanvasLayer"]
offset_right = 30.0
offset_bottom = 30.0
texture = ExtResource("4_g2fun")
stretch_mode = 4

[node name="death_sound" type="AudioStreamPlayer" parent="MageTower"]
stream = SubResource("AudioStreamRandomizer_4aeh8")
max_polyphony = 5
bus = &"SFX"

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("5_fc5ra")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(0.792289, -0.298594, 0.532089, 0, 0.872069, 0.489382, -0.610145, -0.387733, 0.690931, 2.028, 12.674, 17.805)
projection = 1
current = true
size = 30.0

[node name="GPUParticles3D" type="GPUParticles3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.31654, -0.575008, 3.66592)
amount = 64
lifetime = 4.0
preprocess = 4.0
visibility_aabb = AABB(-8.95724, -4, -4, 17.9145, 8, 8)
process_material = SubResource("ParticleProcessMaterial_w5asb")
draw_pass_1 = ExtResource("6_g6y1v")

[node name="EnemySpawner" type="Node3D" parent="." node_paths=PackedStringArray("main_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.7591, 0, 0)
script = ExtResource("5_13m4a")
spawn_radius = 75.0
main_target = NodePath("../MageTower")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_e0jfx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
visible = false
mesh = SubResource("PlaneMesh_fwq5o")

[node name="TowerPlacer" type="Node3D" parent="." node_paths=PackedStringArray("game_ui")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 0, 0, 0)
script = ExtResource("6_voolx")
towers = Array[Resource("res://scripts/Building.gd")]([ExtResource("10_0kmq2"), ExtResource("12_ohaua")])
placeholder_mat = ExtResource("9_wr7oq")
game_ui = NodePath("../GameUI")

[node name="BuildingSound" type="AudioStreamPlayer" parent="TowerPlacer"]
unique_name_in_owner = true
volume_db = -10.0
bus = &"SFX"

[node name="Floor" type="MeshInstance3D" parent="TowerPlacer"]
visible = false
mesh = SubResource("PlaneMesh_e050c")

[node name="StaticBody3D" type="StaticBody3D" parent="TowerPlacer/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TowerPlacer/Floor/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_jx5kv")

[node name="GameUI" parent="." instance=ExtResource("10_edop1")]

[connection signal="gold_changed" from="MageTower" to="TowerPlacer" method="_on_mage_tower_gold_changed"]
[connection signal="gold_changed" from="MageTower" to="GameUI" method="_on_gold_changed"]
[connection signal="buildTower" from="GameUI" to="TowerPlacer" method="_on_game_ui_build_tower"]
